# contextual-memory-architecture

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SESSION_LOG.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
cma/: __init__.py  activity.py  cli.py  config.py  hooks.py  ingest.py
cma/_bundle/agents/: cma-bootstrap.md  cma-curator.md  cma-recorder.md  cma-retriever.md
cma/_bundle/memory_log/: dashboard_template.html
cma/_bundle/obsidian/: graph.json
cma/_bundle/prompts/: AGENT_PROMPT.md
cma/evals/: __init__.py  metrics.py  runner.py
cma/health/: __init__.py  report.py
cma/lifecycle/: __init__.py  archive.py  migrate_tier.py  supersede.py
cma/mcp/: __init__.py  server.py
cma/reasoner/: __init__.py
cma/recorder/: __init__.py  policy.py  recorder.py  templates.py  writers.py
cma/retriever/: __init__.py  embeddings.py  fragments.py  lexical.py  retriever.py  scoring.py  spec_builder.py  traversal.py
cma/schemas/: __init__.py  completion_package.py  context_spec.py  memory_record.py  task_frame.py
cma/storage/: __init__.py  graph_store.py  markdown_store.py
docs/: BENCHMARK_RESULTS.md  README.md  Slideshow.pptx  TESTING_SUITE.md  bench_scaling.py  build_slideshow.py  build_whitepaper.py
examples/: benchmark.yaml
examples/email-checker/: CLAUDE.md  README.md  agent.py
examples/email-checker/config/: settings.yaml
examples/email-checker/docs/: api_notes.md  architecture.md  classification_taxonomy.md
examples/email-checker/docs/decisions/: classification_thresholds.md  notification_channels.md  use_gmail_api.md
examples/email-checker/prompts/: classify_email.md  summarize_thread.md  system_prompt.md
examples/email-checker/skills/: classify.py  fetch_emails.py  notify.py  summarize.py
examples/example_vault/000-inbox/: Welcome.md
examples/example_vault/003-decisions/: Async Capital Call Processing.md
examples/example_vault/004-patterns/: External API Synchronous Bottleneck.md  Queue Retry Pattern.md
tests/: test_activity.py  test_cli.py  test_evals.py  test_fragments.py  test_graph.py  test_health.py  test_hooks.py  test_lexical.py  test_lifecycle.py  test_mcp.py  test_migrate_tier.py  test_parser.py  test_per_source_tokens.py  test_recorder.py  test_retriever.py  test_schemas.py  test_scoring.py  test_spec_builder.py  test_traversal.py
