[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextual-memory-architecture"
dynamic = ["version"]
description = "A lightweight, local-first, Obsidian-compatible memory layer that each agent carries with it"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Danny Watkins", email = "dannywatkins13@gmail.com"},
]
urls = {Homepage = "https://github.com/danny-watkins/contextual-memory-architecture", Repository = "https://github.com/danny-watkins/contextual-memory-architecture", Issues = "https://github.com/danny-watkins/contextual-memory-architecture/issues"}
keywords = ["ai", "agent", "memory", "obsidian", "rag", "graphrag", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "networkx>=3.0",
    "rich>=13.0",
    "numpy>=1.24",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
all = ["sentence-transformers>=2.2", "openai>=1.0", "mcp>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "reportlab>=4.0",
]

[project.scripts]
cma = "cma.cli:app"

[tool.hatch.version]
path = "cma/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["cma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
